# Jupiter-BRT-Desktop

./: BUILD.bazel  README.md  dependencies.bzl  desktop_setup.sh  install.sh  main.patch  utils.bzl
desktop-deploy/: README.md  dependencies.bzl
desktop-deploy/archive/: BUILD.rev1_bundle
desktop-deploy/scripts/: desktop_setup.sh  install.sh
examples/ros2/: BUILD.bazel
examples/ros2/launch/: factesim_cam_manager.launch.py  halo_cameras.yaml
patches/: ros2.patch
scripts/: install.sh  reorganize_python_pkgs.py  restructure_packages.py
templates/: __init__.py.template
tools/ros2/: BUILD.bazel  BUILD.ros2.launch_ros  ros2_adapter.bzl  ros2_ament.bzl  ros2_interfaces.bzl  ros2_launch.bzl  ros2_plugin_aspects.bzl  ros2_providers.bzl  ros2_utils.bzl
