load("@com_bluerivertech//third_party/python:defs.bzl", "vpu_ros_site_packages_path")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

exports_files([
    "launch.py.tpl",
])

py_library(
    name = "launch_ros",
    #    srcs = glob(
    #        ["launch_ros/launch_ros/**/*.py"],
    #    ),
    imports = ["launch_ros"],
    visibility = ["//visibility:public"],
    deps = [
        "@ros2//ament_index:ament_index_python",
        "@ros2//launch",
        "@ros2//launch_ros",
        "@ros2//rcl_interfaces:composition_interfaces_py",
        "@ros2//rcl_interfaces:lifecycle_msgs_py",
        "@ros2//rclpy",
    ],
)

py_library(
    name = "ros2launch",
    srcs = glob(
        ["ros2launch/ros2launch/**/*.py"],
    ),
    imports = ["ros2launch"],
    visibility = ["//visibility:public"],
    deps = [
        ":launch_ros",
        "@ros2//ros2cli:ros2pkg",
    ],
)
